--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -2,11 +2,13 @@ name: temp-behavior-env
 channels:
     - conda-forge
 dependencies:
-    - ipykernel
-    - matplotlib=3.2
-    - numpy=1.18
-    - pandas=1.0
-    - python=3.8
-    - scipy=1.4
-    - seaborn=0.10
-    - statsmodels=0.11
+    - ipykernel=6.29.2
+    - matplotlib=3.8.3
+    - numpy=1.26.4
+    - openpyxl=3.1.2
+    - pandas=2.2.0
+    - python=3.12.2
+    - scipy=1.12.0
+    - seaborn=0.13.2
+    - statsmodels=0.14.1
+    - xlrd=2.0.1
