--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -3,10 +3,12 @@ channels:
     - conda-forge
 dependencies:
     - ipykernel=6.29.2
+    - jupyterlab=4.1.6
     - matplotlib=3.8.3
     - numpy=1.26.4
     - openpyxl=3.1.2
     - pandas=2.2.0
+    - pyarrow=15.0.2
     - python=3.12.2
     - scipy=1.12.0
     - seaborn=0.13.2
